--- a/package.json
+++ b/package.json
@@ -12,7 +12,20 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^24.0.23",
-    "eslint": "^6.1.0",
+    "eslint": "^6.7.2",
     "jest": "^24.9.0"
-  }
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/licarpen/schema-TDD.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/licarpen/schema-TDD/issues"
+  },
+  "homepage": "https://github.com/licarpen/schema-TDD#readme"
 }
